--- a/openocd.cfg
+++ b/openocd.cfg
@@ -31,10 +31,27 @@ target create core1 riscv -chain-position tap1.tap -coreid 0
 init
 
 # Increase timeout for simulation (slower than real hardware)
-riscv set_command_timeout_sec 60
+riscv set_command_timeout_sec 120
 
 # Scan the chain to verify
 scan_chain
+
+# Halt both cores first to prevent running garbage instructions
+echo "Halting all cores..."
+targets core1
+halt
+targets core2
+halt
+
+# Load test program to both cores (if sw/test.bin exists)
+# This prevents "Hart unexpectedly reset" warnings from running invalid instructions
+echo "Loading test program..."
+targets core1
+load_image sw/test.bin 0x00100000 bin
+reg pc 0x00100000
+targets core2
+load_image sw/test.bin 0x00100000 bin
+reg pc 0x00100000
 
 # Display information about the targets
 echo "Target status:"
